# csc-spmv-with-openmp

./: .gitignore  CMakeLists.txt  README.md  col_indices.txt  coo_matrix_generator.py  csc_spmv.cpp  dims.txt  makefile  row_indices.txt  values.txt  vec.txt
data/input/: col_indices.txt  dims.txt  row_indices.txt  values.txt  vec.txt
src/: csc_spmv.cpp
utils/: coo_matrix_generator.py
